WIP handle different upload formats; break down later
